# VLA

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
MoMa_vla/: chat_prompt_node.py  navila_node.py
MoMa_vla/llava/: mm_utils.py
config/: navila.yaml  navila_params.yaml  univla_params.yaml
docker/: Dockerfile  docker-compose.yml
launch/: navila.launch.py  server.launch.py
llava/model/: llava_arch.py
moma_vla/: chat_prompt_node.py  navila_node.py  regex_parshing_node.py
moma_vla/llava/: conversation.py
moma_vla/llava/train/: utils.py
na_vila_ros/: action_executor_node.py  navila_node.py  regex_parshing_node.py  server_node.py
na_vila_ros/llava/model/: builder.py
na_vila_ros/llava/model/language_model/: builder.py  llava_llama.py
na_vila_ros/llava/model/multimodal_encoder/: builder.py
na_vila_ros/llava/model/multimodal_encoder/intern/: flash_attention.py  modeling_intern_vit.py
na_vila_ros/llava/utils/: media.py  tokenizer.py
univla_ros/: univla_inference.py  univla_node.py
univla_ros/emu3/mllm/: modeling_emu3.py  processing_emu3.py
